# mkvwriter

./: CMakeLists.txt  MatroskaMuxer.cpp  MatroskaSimpleTags.cpp  README.md
examples/: CMakeLists.txt
examples/mjpgmuxer/: CMakeLists.txt  main.cpp
include/mkvwriter/: MatroskaAttachment.h  MatroskaMuxer.h  MatroskaSimpleTags.h
scripts/: make_release
src/: CMakeLists.txt  IOCallbackWrapper.h  MatroskaAttachment.cpp  MatroskaMuxer.cpp  MatroskaMuxer.h  MatroskaSimpleTags.cpp  MatroskaSimpleTags.h
